# SumNode

./: CMakeLists.txt  package.xml
include/codes/: calculadoranode.hpp
include/summer_school/: calculator_node.hpp
launch/: calculator_node.launch.py  main_node.launch.py
params/: calculator.yaml
src/: calculadoramain.cpp  calculadoranode.cpp  calculator_node.cpp  main.cpp
